--- a/_drafts/2023-04-28-the-lead-crisis-in-chicago.html
+++ b/_drafts/2023-04-28-the-lead-crisis-in-chicago.html
@@ -7,8 +7,11 @@ tag:
 - IIT 
 - Chicago 
 - public health 
+image: ../assets/images/projects/ipro/chicago.png
+headerImage: true
 projects: true 
 description: "My research at IIT on lead levels in Chicago water" 
+rel-path: ../assets/images/projects/ipro
 category: project 
 author: kjros 
 ---
@@ -43,13 +46,13 @@ author: kjros
 
 <p>
     The Peanut Butter Hunters (PBH) spent the semester exploring data released by Chicago on lead levels in drinking water. 
-     With statistical analysis, data science techniques, and geo-spatial visualization, we concluded 
-    there was, indeed, a lead crisis in the city. 
+    <b>With statistical analysis, data science techniques, and geo-spatial visualization, we concluded 
+    there was, indeed, a lead crisis in the city.</b>
 </p>
 
 <div class="text-center">
     <figure> 
-        <img src="../assets/images/projects/ipro/pbh_group.jpg" alt="my team with our poster and presentation on IPRO day" style="max-width:90%">
+        <img src="{{ page.rel-path }}/pbh_group.jpg" alt="my team with our poster and presentation on IPRO day" style="max-width:90%">
         <figcaption>The Peanut Butter Hunters, including the infamous <a href='https://x1atomic.onuniverse.com/' target='_blank'>Jacob H. Thomas</a>. 
         And yes, our screen was large enough to strike terror into the hearts of anyone who walked by.</figcaption>
     </figure>
@@ -79,14 +82,14 @@ author: kjros
 <p>
     In 2022, Chicago 
     <a href='https://www.chicago.gov/content/dam/city/depts/water/ConsumerConfidenceReports/2022_WaterQualityReport.pdf'>
-        reported a 90th percentile of 6.8 ppb</a>; 
+        reported a 90th percentile of 6.8ppb</a>; 
         <i>technically</i>, they are in compliance with the LCR. We find several issues with this yearly procedure: 
 </p>
 
 <p>
     <ol>
         <li>Chicago is only required to test 50 households, a mere .0045% of total residences. Under the LCR, up to five households 
-            could have had more than 15 ppb. 
+            could have had more than 15ppb. 
         </li>
         <li>There's evidence the city only <a href='https://www.chicagotribune.com/investigations/ct-chicago-water-lead-contamination-20180411-htmlstory.html' target="_blank"> 
             tests households of employees who work for the Chicago Department of Water Management</a> (CDWM).</li>
@@ -109,7 +112,7 @@ author: kjros
 
 <div class="text-center">
     <figure>
-        <img src="../assets/images/projects/ipro/LCR_LCRR_diagram.png" alt="diagram of sequential draws" style="max-width:80%">
+        <img src="{{ page.rel-path }}/LCR_LCRR_diagram.png" alt="diagram of sequential draws" style="max-width:80%">
         <figcaption>Sampling procedures for lead testing. On the left is the current method under the LCR; on the right is the future method under the LCRR.</figcaption>   
     </figure>
 </div>
@@ -143,7 +146,7 @@ author: kjros
 
 <p>
     The LCRR arose from questions on how best to sample water for lead testing: is the 1st or 5th draw more indicative? Or is it another liter draw? 
-    We sought to answer this question by comparing each liter draw. 
+    We sought to answer this by comparing each liter draw. 
     For each household's report, we calculated the average lead level across the 10 draws. 
     In theory, the draw best representing lead would follow a similar distribution as the average lead level; 
     we drew the cummulative distribution function (CDF) for each of the 10 draws and compared the difference between distributions: 
@@ -151,7 +154,7 @@ author: kjros
 
 <div class="text-center">
     <figure>
-        <img src="../assets/images/projects/ipro/cdf-sse.png" alt="line graph of sse of cdfs for the different draws with the average lead" style="max-width:95%">
+        <img src="{{ page.rel-path }}/cdf-sse.png" alt="line graph of sse of cdfs for the different draws with the average lead" style="max-width:95%">
         <figcaption>Sum of Square Errors (SSE) between the average lead level each sequential draw</figcaption>
     </figure>
 </div>
@@ -164,7 +167,7 @@ author: kjros
 
 <div class="text-center">
     <figure>
-        <img src="../assets/images/projects/ipro/cdfs.png" alt="cdf of 1st, 5th, average, and 8th draws" style="max-width:110%">
+        <img src="{{ page.rel-path }}/cdfs.png" alt="cdf of 1st, 5th, average, and 8th draws" style="max-width:110%">
         <figcaption>CDFs of the 1st draw, 5th draw, 8th draw, and mean lead</figcaption>
     </figure>
 </div>
@@ -176,14 +179,14 @@ author: kjros
 
 <div class="text-center">
     <figure>
-        <img src="../assets/images/projects/ipro/boxplot-draws.png" alt="boxplots of all draws and the average" style="max-width:100%">
+        <img src="{{ page.rel-path }}/boxplot-draws.png" alt="boxplots of all draws and the average" style="max-width:100%">
         <figcaption>Boxplots of lead amount across the 10 draws and the average</figcaption>
     </figure>
 </div>
 
 <p>
     From this work, we concluded the LCRR proposes a better sampling method; i.e., one that represents the average lead case 
-    better than the current LCR. Since we found the 8th draw to have a closer distribution to the average case, we questioned: will the LCRR 
+    better than the current LCR. Since we found the 8th draw to have a closer distribution to the average case, will the LCRR 
     require further revisions? In the above graph, we also saw a general trend: the more liters collected,
     the higher the quantiles of lead. Perhaps collecting <i>even later</i> draws would give a better estimate. 
 </p>
@@ -204,7 +207,7 @@ author: kjros
 
 <div class="text-center">
     <figure>
-        <img src="../assets/images/projects/ipro/water-kit.png" alt="instructions on timed draw procedure">
+        <img src="{{ page.rel-path }}/water-kit.png" alt="instructions on timed draw procedure">
         <figcaption>Lead testing kit instructions from the CDWM</figcaption>
     </figure>
 </div>
@@ -216,7 +219,7 @@ author: kjros
 
 <div class="text-center">
     <figure>
-        <img src="../assets/images/projects/ipro/corr-matrix.png" alt="correlation matrix with color map" style="max-width:95%">
+        <img src="{{ page.rel-path }}/corr-matrix.png" alt="correlation matrix with color map" style="max-width:95%">
         <figcaption>Correlation matrix of timed draws and sequential draws</figcaption>
     </figure>
 </div>
@@ -231,4 +234,245 @@ author: kjros
     We also considered the R&#178; values of simple linear regression between the draws. 
     The 5 minute draw had an R&#178; value of .213 with the 5th draw, and .170 with the 8th draw. 
     This indicated the initial tests do not accurately predict results from the follow-up tests. 
+</p>
+
+<hr>
+
+<p>
+    Whilst Chicago claims to have "reasonable" lead levels (although no amount of lead is safe for the body), 
+    the introduction of the LCRR may change public awareness on the lead crisis. 
+    In the meantime, since current testing methods don't accurately reflect lead levels, we suspected some residences 
+    may be disproportionately affected: perhaps those of lower incomes, access to education, price, etc. 
+    
+</p>
+
+<p>
+    We classify each result as having low (less than 5ppb), medium (5ppb to less than 15ppb), and high (15ppb+) lead. 
+    We first considered the location of residence: 
+</p>
+
+<div class="text-center">
+    <figure>
+        <img src="{{ page.rel-path }}/chicago-map.png" alt="chicago map of lead levels" style="max-width:95%">
+        <figcaption>Average lead levels from sequential testing.
+            <br>
+            Author's note: this map was not included in our final presentation, but was the catalyst for the rest of our work 
+            in community data. Additionally, I'm addicted to coloring graphs. 
+        </figcaption>
+    </figure>
+</div>
+
+<p>
+    With no discernable pattern, we then considered other factors. One which we had the most data was median income for each census tract: 
+</p>
+
+<div class="text-center">
+    <figure>
+        <img src="{{ page.rel-path }}/chicago-map-income-seq.png" alt="chicago color map of income from sequential testing">
+        <figcaption>Median tract income from sequential testing</figcaption>
+    </figure>
+</div>
+
+<p>
+    We noted many sequential tests came from residences north or south of the Loop, and tend to have lower incomes. 
+    We followed up the distribution of lead intervals by income: 
+</p>
+
+<div class="text-center">
+    <figure>
+        <img src="{{ page.rel-path }}/hist-income.png" alt="stacked histogram graph with lead levels" style="width:100%;height:auto;">
+        <figcaption>Frequency of lead level intervals by income</figcaption>
+    </figure>
+</div>
+
+<p>
+    Those at low-mid income classes completed less follow-up sequential tests than what we would expect, based
+    on the overall distribution of all income in Chicago (shown in black). 
+    Likewise, we saw a similar pattern with the total amount of cases at "high" lead levels. 
+    These classes reported higher counts of higher lead than those at the low or high income classes, based on income distribution (shown in pink).
+</p>
+
+<p>
+    It seems lower-income residences reported higher lead levels than those at higher incomes. 
+    To furhter support this, we developed a statistical hypothesis test using the Irwin-Hall distribution (IH). 
+</p>
+
+<div class="text-center">
+    <p>
+        H<sub>0</sub> = There is no relationship between income and lead levels. 
+        <br>
+        H<sub>A</sub> = There is a relationship between income and lead levels. 
+        <br>
+        &alpha; = .05 
+    </p>
+</div>
+
+<p>
+    We let <i>x<sub>1</sub>, x<sub>2</sub>,..., x<sub>m</sub></i>
+    be the average lead level for <i>m</i> test results from the sequential data. 
+    We assumed the income quantile of each household is i.i.d. from the uniform distribution. 
+    Thus, the sum of quantiles of these points = <i>X ~ IH(m)</i>. 
+</p>
+
+<p>
+    Set some ppb threshold, <i>k</i>. We calculate <i>x</i> to be the sum of the income quantiles 
+    for all points which are at, or exceed, k. 
+</p>
+
+<p>
+    With <i>x</i>, we calculate Pr(<i>X</i>	&le; <i>x</i>) under the distribution for different values of k. 
+    In other words, we find the probability that the sum of quantiles is less than x, assuming 
+    an IH distribution. 
+</p>
+
+<div class="text-center">
+    <figure>
+        <img src="{{ page.rel-path }}/ih-dist.png" alt="test statistics for different k thresholds" style="width:150%; height:auto;">
+        <figcaption>Statistical significance from a one-sided hypothesis test for different lead level thresholds, 
+            with the red indicating our &alpha; level 
+        </figcaption>
+    </figure>
+</div>
+
+<p>
+    For several lead thresholds, such as 15ppb, we saw significance. Incomes for households reporting more than 15ppb 
+    were low enough to reject our null hypothesis; we concluded there is a relationship between low income and high lead levels. 
+</p>
+
+<hr>
+
+<h3>Discussion</h3>
+
+<p>
+    The PBH found significant results: namely, the LCRR 5th draw will likely be a better indicator of lead than the current LCR 1st draw, 
+    current testing procedure isn't representing current lead and doesn't predict follow-up testing well, and there is a relationship between high 
+    lead and lower income. 
+</p>
+
+<p>
+    Yet, it's hard to determine the next steps for Chicago. Even with the LCRR, sampling such a small number of households 
+    (and having biased responses to begin with) still may not exceed the 90th percentile standard by the EPA. 
+</p>
+
+<p>
+    A major concern is how little the public knows about lead testing and the LSLs in the city. 
+    Chicago offers free testing, and supposedly free water filters to those greatly affected, but 
+    so few citizens know about this. On our presentation day, each judge, student, and faculty we talked to 
+    only had minor knowledge about the problem. <b>Everyone remembers the Flint Crisis, but not everyone knows what's in their own water.</b>
+</p>
+
+<p>
+    Even for those interested, current sources of information are lacking, to say the least. 
+    To find information on the yearly reports to the EPA, the team had to access to the 
+    <a href="www.chicago.gov" target="_blank">City of Chicago site</a>, click through at least six webpages, 
+    and search for the lead results within the resulting report. 
+    Navigating the CDWM website is highly unintuitive; information about lead in water is hard to find, sections are out of date, and 
+    the main page is poorly organized. 
+</p>
+
+<p>
+    Testing rates are low: only about 30,000 initial tests have been submitted since 2016; 
+    of those, 2,400 follow-up tests were submitted. With a city of more than 3 million residences, this is nearly nothing. 
+    And for those who manage to request lead testing kits from the CDWM, the process is long and arduous. 
+    In the middle of the semester, I moved from a high-rise apartment to a multi-unit house, on the south side of Chicago. 
+    I was fortunate to have knowledge about this problem, and requested a testing kit. 
+</p>
+
+<p>
+    <ul>
+        <li>April 10th: I signed up for a lead testing kit</li>
+        <li>April 18th: Recieved kit</li>
+        <li>April 25th: Employee from the CWDM picked up our sampled water</li>
+        <li>May 1st: Recieved an email from the city (below)</li>
+        <li>May 22nd: Recieved results via letter (below)</li>
+    </ul>
+</p>
+
+<div class="text-center">
+    <figure>
+        <img src="{{ page.rel-path }}/chi-email.png" style="border:1px solid #000;">
+        <figcaption>
+            Email sent by the city of Chicago on water testing updates 
+        </figcaption>
+    </figure>
+</div>
+
+<div class="text-center">
+    <figure>
+        <img src="{{ page.rel-path }}/results.jpg" style="border:1px solid #000;">
+        <figcaption>
+            Results from lead testing 
+        </figcaption>
+    </figure>
+</div>
+
+<p>
+    We found our results from the 1st liter draw exceeded 15ppb; in fact, it was nearly double the LaL. 
+    The city requested we conduct follow-up testing; our household will be contributing to the same data I had been working on that semester, 
+    which no one but some IIT undegrads will study. 
+</p>
+
+<p>
+    This process took 43 days in total. 
+    Perhaps it's a consequence of slow-moving bureaucracy, but combined with the lack of easily accessible, understandable, and updated information? 
+</p>
+
+<p>
+    Chicago is failing its citizens. 
+    It starts as moving slow to replace LSLs. Then, it's sampling less than 0.001% of biased households to send to the EPA, and 
+    claiming our water is safe for consumption. After that, it's failing to maintain current information on the lead problem. 
+    For those citizens who <i>are</i> aware, the process is time-consuming and unclear. 
+    For those who aren't? For those in lower-income neighborhoods (and perhaps other factors)? 
+</p>
+
+<p>
+    They bear the consequences of the lead crisis... and they don't even know it. 
+</p>
+
+<hr>
+
+<h3>Thoughts, Questions, and Concerns</h3>
+
+<p>
+    My team and I chose not to reach out to news outlets, public figures, or local politicians. I would say we had a good reason: we were students, 
+    and polishing this project took much of our effort at the semester's end. 
+</p>
+
+<p>
+    However, I am still curious to see the city's response once LCRR is in effect. Education on the impacts of lead in water and LSLs, 
+    overhaul on lead testing, picking up the pace for LSL replacements: all lead to a healthier, more knowledgeable population. 
+    I can hope this revision will be the catalyst for change, but only time can tell. 
+</p>
+
+<p>
+    For those interested: 
+    <ul>
+        <li><a href="https://docs.google.com/presentation/d/1k-KOxjTVjsNjoAQYutKNKQjbKAbPTWdIFniWaAhK1iI/edit?usp=sharing" target="_blank">Link to our presentation</a>
+        </li>
+        <li><a href="https://docs.google.com/presentation/d/1k-KOxjTVjsNjoAQYutKNKQjbKAbPTWdIFniWaAhK1iI/edit?usp=sharing" target="_blank">Link to our poster</a>
+        </li>
+        <li><a href="https://github.com/X1Atomic/ChicagoWaterCrisis" target="_blank">Codebase for our results</a></li>
+    </ul>
+</p>
+
+<p>Good luck, reader. And if you live in Chicago: test your water.</p>
+
+<hr>
+
+<p style="font-size: larger;">
+    TL;DR: 
+    <ul>
+        <li>
+            Chicago has hundreds of thousands lead pipes supplying water, but is currently in compliance with current EPA LCR regulation (though testing may be biased).
+        </li>
+        <li>
+            The EPA is set to release a new revision, the LCRR, in 2024. We found that the LCRR's method of testing water is more indicative of lead levels than the LCR.
+        </li>
+        <li>
+            Meanwhile, households at lower-incomes tend to have higher lead levels, and are being disproportionately affected.
+        </li>
+        <li>
+            The lack of public discussion, awareness, and education on this crisis is critical; Chicago, moving forward, must make changes to secure the health of the public.
+        </li>
+    </ul>
 </p>
