remove silly songs and stuff

--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@ layout: page
   </p>
   
   <p>
-    I am a third year undergraduate student, studying Applied Mathematics and Computer Science at the Illinois Institute of Technology 
+    I am a fourth year student, studying Applied Mathematics and Computer Science at the Illinois Institute of Technology 
     (IIT) in Chicago, IL. 
   </p>
 
@@ -30,13 +30,13 @@ layout: page
   <p>
     Feel free to click around, or send me an email. 
   </p>
-  
+<!--   
   <p>
     <small>
       Psst: don't have much time to explore? Try reading <a href="{% link _posts/2000-01-01-cheat-sheet.html %}">this</a>.
       <br>
       Alternatively, to listen to some quirky tunes, click <a href="{% link _posts/2000-01-02-currated-playlist.html %}">here</a>.
     </small>
-  </p>
+  </p> -->
 
 </div>
