permalinks now have categories!

--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@ layout: page
 
 <div class="{% if site.animation %}animated{% endif %}">
 
-  <img src="../assets/images/about-beanie.jpg" class="img-thumbnail" alt="profile pic of me in a beanie" style="max-width: 70%; max-height: auto; margin-bottom: 3rem;">
+  <img src="/assets/images/about-beanie.jpg" class="img-thumbnail" alt="profile pic of me in a beanie" style="max-width: 70%; max-height: auto; margin-bottom: 3rem;">
   
   <p>
     Hi, I'm Kaylee. Welcome to my site.
